# 3mul

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml
src/: data_sets.rs  fast_hash_set.rs  lib.rs  main.rs
