[package]
name = "three_mul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
num-integer = "0.1.45"
num-prime = "0.4.1"
intmap = "0.7.1"
prettytable-rs = "^0.8"

[profile.release]
debug = true
